# cess-rust-sdk

./: .env.sample  .gitignore  Cargo.toml  README.md  api.txt  docs.md
examples/: Cargo.toml  README.md  file.txt
examples/src/: balances.rs  files.rs  lib.rs  object.rs  oss.rs  retriever.rs  storage_handler.rs
metadata/: metadata.scale  metadata_0.9.42.scale  metadata_0.9.45.scale  metadata_old.scale  metadata_v0.7.8-venus.scale  metadata_v0.7.8.scale
src/: chain.rs  constants.rs  core.rs  gateway.rs  ledger.rs  lib.rs  retriever.rs  utils.rs
src/chain/: audit.rs  deoss.rs  file.rs  file_bank.rs  mod.rs  oss.rs  sminer.rs  snapshot.rs  staking.rs  storage_handler.rs  tee_worker.rs
src/chain/audit/: query.rs  transaction.rs
src/chain/balances/: transaction.rs
src/chain/file_bank/: query.rs  transaction.rs
src/chain/oss/: query.rs  transaction.rs  types.rs
src/chain/storage_handler/: query.rs  transaction.rs
src/config/: mod.rs
src/core/: mod.rs
src/core/crypt/: mod.rs
src/core/erasure/: mod.rs
src/core/hashtree/: mod.rs
src/core/pattern/: mod.rs
src/core/process/: mod.rs
src/core/sdk/: mod.rs
src/core/utils/: account.rs  bucket.rs  cpu.rs  file.rs  hash.rs  ip.rs  mod.rs  recover.rs  str.rs
src/gateway/: file.rs  object.rs  upload_response.rs
src/retriever/: gateway.rs  proxy_re_encryption.rs
src/utils/: account.rs  bucket.rs  file.rs  ip.rs  mod.rs  str.rs
