[package]
name = "cess-rust-sdk"
version = "0.7.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
base58 = "0.2.0"
base64 = "0.22.1"
blake2 = "0.10.6"
bs58 = "0.5.1"
chrono = { version = "0.4.42", features = ["serde"] }
curve25519-dalek = { version = "4.1.3", features = ["alloc"] }
dotenv = "0.15.0"
futures = "0.3.30"
futures-util = "0.3.31"
hex = "0.4.3"
ledger-apdu = "0.11.0"
ledger-transport = "0.11.0"
ledger-transport-hid = "0.11.0"
ledger-zondax-generic = "0.11.2"
libp2p = { version = "0.53.2", features = ["dns"] }
libp2p-core = "0.41.3"
log = "0.4.22"
once_cell = "1.19.0"
rand = "0.8.5"
reed-solomon-erasure = "6.0.0"
regex = "1.10.5"
reqwest = {version = "0.12.5", features = ["multipart", "json", "stream"]}
schnorrkel = "0.11.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"

# Important! sp-keyring version should depend on same version of sp-core exported from subxt
sp-keyring = "34.0.0"
subxt = { git = "https://github.com/paritytech/subxt", tag="v0.38.0", features=["substrate-compat", "reconnecting-rpc-client"]}
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = {version = "0.7.12", features = ["io", "io-util"] }
trust-dns-resolver = "0.23.2"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

rssdk = { git = "https://github.com/CESSProject/cess-crypto" }

